# BKS-plant-search

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  result_save.txt
notebooks/: batch_dataset_generate.ipynb  depth-anything-v2-example.ipynb  depth-anything-v3-example.ipynb  eda.ipynb  model_inference.ipynb  train.ipynb
notebooks/wandb/run-20260209_214706-rex64t69/files/: wandb-metadata.json
notebooks/wandb/run-20260209_215927-ptwb1ip6/files/: requirements.txt  wandb-metadata.json
src/: forward.py  inference.py  main.py
src/depth_anything_v2/: __init__.py
src/model/: CNN_regression.py  dual_regression.py
